* Improvements on the keyboard preview. Now demos typing (in Theme selection).
* Several crash fixes and bug fixes.

More here: https://github.com/AnySoftKeyboard/AnySoftKeyboard/milestones/1.8-r1