@@ -1,4 +1,6 @@
+* for BETA release only - Internet permission is used to track crashes.
 * Improvements on the keyboard preview. Now demos typing (in Theme selection).
 * Several crash fixes and bug fixes.
+* Localization update: FR (100%).
 
 More here: https://github.com/AnySoftKeyboard/AnySoftKeyboard/milestones/1.8-r1
